--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# customize
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +131,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+/build
+/dist
+.DS_Store
+**/.DS_Store
+.DS_Store?
+/.vscode
